Fixed homepage spacing issues

--- a/source/stylesheets/layouts/_header.scss
+++ b/source/stylesheets/layouts/_header.scss
@@ -3,7 +3,7 @@
   z-index: 20;
   display: flex;
   align-items: center;
-  padding-top: 40px;
+  padding-top: 30px;
   padding-left: 10px;
   padding-right: 10px;
   transition: background-color .3s;
