--- a/source/stylesheets/modules/homepage/_blog-grid.scss
+++ b/source/stylesheets/modules/homepage/_blog-grid.scss
@@ -28,8 +28,8 @@
   
 	&__item--1{
     max-width: 100%;
-    width: 410px;
     padding: 0px 10px;
+    padding-left: 120px;
 		margin:0 auto;
 	}
 	&__item--3{
